Core Data - tenth commit

--- a/ThirdTask/View/Base.lproj/Main.storyboard
+++ b/ThirdTask/View/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                             <inset key="largeContentSizeImageInsets" minX="0.0" minY="1" maxX="0.0" maxY="0.0"/>
                                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <connections>
-                                                <action selector="didClickEditButton:" destination="BYZ-38-t0r" id="Q6q-HK-rMS"/>
+                                                <action selector="didPressRightBarButton:" destination="BYZ-38-t0r" id="f4T-mN-dzV"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -90,7 +90,7 @@
                                                     <color key="baseForegroundColor" systemColor="systemRedColor"/>
                                                 </buttonConfiguration>
                                                 <connections>
-                                                    <action selector="didClickDeleteButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qgJ-rl-iaO"/>
+                                                    <action selector="didPressDeleteButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gSQ-TR-do0"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1J9-ls-sUc">
@@ -101,7 +101,7 @@
                                                     <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </buttonConfiguration>
                                                 <connections>
-                                                    <action selector="didClickAddButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GHg-09-9mY"/>
+                                                    <action selector="didPressAddButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0nD-9i-dJd"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -289,7 +289,7 @@
                                     <color key="baseBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="didClickAddButton:" destination="frK-bX-IfS" eventType="touchUpInside" id="51d-6H-wEc"/>
+                                    <action selector="didPressAddButton:" destination="frK-bX-IfS" eventType="touchUpInside" id="7R4-0v-WrK"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -343,7 +343,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
